src/test/resources/Parser/SyntaxErrors/SignatureCollisionGeneric.front
class Q:
    f<A>(A a, int32 i := 5) {}
    f(float32 f, int32 i) {}